--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,9 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Kotlin template
-# Compiled class file
-*.class
-
-# Log file
-*.log
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
 .idea/**
-
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
 .gradle/
-
-# IntelliJ
 out/
 build/
 
-# Source repo for the mkdocs material theme
-mkdocs-material/
-
 local.properties
+
+# Built docs site
+site/
